Small memory optimizations
git-svn-id: svn://source.pentaho.org/svnkettleroot/mirror/Kettle/trunk@2478 5fb7f6ec-07c1-534a-b4ca-9155e429e800