@@ -51,7 +51,7 @@ public class ExampleCellModifier implements ICellModifier
         switch (columnIndex)
         {
         case 0: // COMPLETED_COLUMN 
-            result = new Boolean(task.isCompleted());
+            result = Boolean.valueOf(task.isCompleted());
             break;
         case 1: // DESCRIPTION_COLUMN 
             result = task.getDescription();
@@ -62,7 +62,7 @@ public class ExampleCellModifier implements ICellModifier
             int i = choices.length - 1;
             while (!stringValue.equals(choices[i]) && i > 0)
                 --i;
-            result = new Integer(i);
+            result = Integer.valueOf(i);
             break;
         case 3: // PERCENT_COLUMN 
             result = task.getPercentComplete() + "";
